--- a/src/components/About.css
+++ b/src/components/About.css
@@ -117,11 +117,11 @@ html, body {
     fill: var(--text);
     cursor: pointer;
 }
-.resume:hover{
+.resume-icon:hover{
     fill: var(--link);
     cursor: pointer;
 }
-.resume:visited{
+.resume-icon:visited{
     fill: var(--text);
     cursor: pointer;
 }
